@@ -1,5 +1,11 @@
 2003-11-20  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-extracting.c:
+	Disable all of the widgets in the main window when
+	extracting. Patch from Brent Fox <bfox@redhat.com>.
+
+2003-11-20  Ross Burton  <ross@burtonini.com>
+
 	* data/sound-juicer.glade:
 	* data/sound-juicer.schemas.in:
 	* src/sj-extracting.c:
